--- a/WebUI/ClientApp/src/app/home/home.component.html
+++ b/WebUI/ClientApp/src/app/home/home.component.html
@@ -7,4 +7,8 @@
   <img src="/images/bali_surfshot.JPG" alt="Sample Photo" />
 
   <div style="background-image: url('/images/bali_surfshot.JPG');"></div>
+
+  <div> There are {{surfBreaks.length}} surf breaks here. 
+    <a [routerLink] ="['/surf-breaks-list']"> See them all! </a>
+  </div>
 </div>
