Add search bar component and update total count on home page

--- a/WebUI/ClientApp/src/app/home/home.component.html
+++ b/WebUI/ClientApp/src/app/home/home.component.html
@@ -8,7 +8,7 @@
 
   <div style="background-image: url('/images/bali_surfshot.JPG');"></div>
 
-  <div> There are {{surfBreaks.length}} surf breaks here. 
+  <div> There are {{totalCount}} surf breaks here. 
     <a [routerLink] ="['/surf-breaks-list']"> See them all! </a>
   </div>
 </div>
