--- a/WebUI/ClientApp/src/app/search-bar/search-bar.component.html
+++ b/WebUI/ClientApp/src/app/search-bar/search-bar.component.html
@@ -1,15 +1,13 @@
 <div>
-  <!--<form>
-    <div class="form-group">
-      <div class="input-group">
-        <input type="search" class="form-control" />
-        <span class="input-group-btn">
-          <button class="btn btn-default">
-            <i class="glyphicon glyphicon-search"></i>
-          </button>
-        </span>
-      </div>
+  <div class="form-group">
+    <div class="input-group">
+      <input type="search" class="form-control" name="title" #searchTerm />
+      <span class="input-group-btn"></span>
+      <button class="btn btn-primary" (click)="performSearch(searchTerm)">
+        Search
+        <i class="glyphicon glyphicon-search"></i>
+      </button>
     </div>
-  </form>-->
+  </div>
 </div>
 
